--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Meme Libs</title>
-	
-
-	
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	
+	<form>
+	<h1>MEME LIBS</h1>
+<div class="form-box">
+		<input class="search-txt" type="text" name="" placeholder="things">
+		<a class="search-btn" href="#">
+			<div class="search-box">
+				<input class="search-txt" type="text" name="" placeholder="feelings">
+				<a class="search-btn" href="#">
+					<div class="search-box">
+						<input class="search-txt" type="text" name="" placeholder="places">
+						<a class="search-btn" href="#">
+							<button class="search-btn" type="button">Search</button>
+
+						</a>
+					</div>
+
+
 </body>
+
 </html>
