added code to index.html and meme.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Meme Libs</title>
 	<link rel="stylesheet" href="../Project-1/assets/style.css">
-	<link src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </head>
 
@@ -26,14 +26,14 @@
 			</label>
 			  
 			<label>
-			<input type="search-button" id="button" value="Submit Form" />
+			<button id="search-button" value="Submit Form">Submit Form</button>
 			</label>
 			  
 		</div>
 	</form>
 	
 
-	<link rel="text/javascript" href="../Project-1/assets/java/meme.js">
+	<script src = "../Project-1/assets/java/meme.js"></script>
 </body>
 
 </html>
