--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="UTF-8">
 	<title>Meme Libs</title>
 	<link rel="stylesheet" href="../Project-1/assets/style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 </head>
 
 <body>
+	
 	<form>
 		<div>
 			<h1>Meme Inputs</h1>
@@ -31,9 +32,15 @@
 			  
 		</div>
 	</form>
+	<div id="gifs-appear-here" class="row">
+		<div class="col-sm-3"></div>
+		<div class="col-sm-3"></div>
+		<div class="col-sm-3"></div>
+		<div class="col-sm-3"></div>
+	</div>
 	
 
-	<script src = "../Project-1/assets/java/meme.js"></script>
+	<script src="assets/java/meme.js"></script>
 </body>
 
 </html>
