fixed giphy size

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 		<div>
 			<h2>MEME LIBS</h2>
 			<label>
-				<span>Think of an Object!<br>Ex: Ball, Cat, Window</span><input class="object-input" type="text"
+				<span>Think of an Object!<br></span><input class="object-input" type="text" placeholder="Ex: Ball, Cat, Window"
 					name="name" />
 			</label>
 
 			<label>
-				<span>How are you Feeling?<br>Ex: Sad, Melancholy, Excited</span><input class="emotion-input"
-					type="text" name="email" />
+				<span>How are you Feeling?<br></span><input class="emotion-input"
+					type="text" placeholder="Ex: Sad, Melancholy, Excited" name="email" />
 			</label>
 
 			<label>
-				<span>Imagine a place!<br>Ex: Outside, School, Paris</span><input class="place-input" type="text"
+				<span>Imagine a place!<br></span><input class="place-input" type="text" placeholder="Ex: Outside, School, Paris"
 					name="subject" />
 			</label>
 
