--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<div>
 			<h1>Meme Inputs</h1>
 			<label>
-				<span>Enter An Object</span><input id="object-input" type="text" name="name" />
+				<span>Enter An Object</span><input id="object-input" type="text" name="object" />
 			</label>
 
 			<label>
-				<span>How Am I Feeling</span><input id="emotion-input" type="text" name="email" />
+				<span>How Am I Feeling</span><input id="emotion-input" type="text" name="emotion" />
 			</label>
 
 			<label>
@@ -35,11 +35,6 @@
 
 		</div>
 	</form>
-<<<<<<< HEAD
-	<div id="gifs-appear-here">
-	</div>
-	<script src="../Project-1/assets/java/meme.js"></script>
-=======
 	<div id="gifs-appear-here" class="row">
 		<div class="col-sm-3"></div>
 		<div class="col-sm-3"></div>
@@ -49,7 +44,6 @@
 	
 
 	<script src="assets/java/meme.js"></script>
->>>>>>> bd79865b60bc8d3a0878e30f49516f67dc570523
 </body>
 
 </html>
