--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 
 <body class="bkgrd">
 
+		<div class="row">
+				<div class="column">
+				  <img src="../desktop/stuff/kermit1.jpg">
+				  
+				  
+		</div>
 
 	<form>
 		<div>
