--- a/index.html
+++ b/index.html
@@ -2,58 +2,39 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<title>Meme Libs</title>
-	<link rel="stylesheet" href="../Project-1/assets/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lusitana&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Meme Libs</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Calistoga&display=swap" rel="stylesheet">
+
+
 </head>
 
-<body class="bkgrd">
+<body>
 
-		<div class="row">
-				<div class="column">
-				  <img src="../desktop/stuff/kermit1.jpg">
-				  
-				  
-		</div>
+    <div id="SLIDE_BG">
+        <div class="card" style="width: 22rem;">
+            <img src="assets/images/logo-transparent.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Welcome to The Laugh Factory! Use our search engine
+                    below to brighten up your day.
+                </p>
+                <input class="form-control" placeholder="Put something funny here Yo!" id="ex1" type="text">
+                <br>
+                <div class="input-group-append">
 
-	<form>
-		<div>
-			<h2>MEME LIBS</h2>
-			<label>
-				<span>Think of an Object!<br></span><input class="object-input" type="text" placeholder="Ex: Ball, Cat, Window"
-					name="name" />
-			</label>
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                </div>
+            </div>
 
-			<label>
-				<span>How are you Feeling?<br></span><input class="emotion-input"
-					type="text" placeholder="Ex: Sad, Melancholy, Excited" name="email" />
-			</label>
-
-			<label>
-				<span>Imagine a place!<br></span><input class="place-input" type="text" placeholder="Ex: Outside, School, Paris"
-					name="subject" />
-			</label>
-
-			<label>
-				<button id="search-button" value="Submit Form">Try me!</button>
-			</label>
-
-		</div>
-	</form>
-	<div id="gifs-appear-here" class="row">
-		<div class="col-sm-3"></div>
-		<div class="col-sm-3"></div>
-		<div class="col-sm-3"></div>
-		<div class="col-sm-3"></div>
-	</div>
-	
-
-
-	<script src="../Project-1/assets/java/meme.js"></script>
+        </div>
+        <div id="gifs-appear-here" class="row" border: solid 1px #CCC></div>
+        </div>
+        <script src="assets/java/meme.js">
+        </script>
 </body>
 
 </html>
