--- a/index.html
+++ b/index.html
@@ -12,30 +12,15 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 </head>
 
 <body class="bkgrd">
-
-
+		
 	<form>
 		<div>
 			<h2>MEME LIBS</h2>
 			<label>
-<<<<<<< HEAD
-				<span>Enter An Object</span><input id="object-input" type="text" name="object" />
-			</label>
-
-			<label>
-				<span>How Am I Feeling</span><input id="emotion-input" type="text" name="emotion" />
-			</label>
-
-			<label>
-				<span>Imagine A place</span><input id="place-input" type="text" name="subject" />
-			</label>
-
-			<label>
-				<button id="search-button" value="Submit Form">Submit Form</button>
-=======
 				<span>Think of an Object!<br></span><input class="object-input" type="text" placeholder="Ex: Ball, Cat, Window"
 					name="name" />
 			</label>
@@ -49,22 +34,31 @@
 				<span>Imagine a place!<br></span><input class="place-input" type="text" placeholder="Ex: Outside, School, Paris"
 					name="subject" />
 			</label>
-
+			
 			<label>
-				<button id="search-button" value="Submit Form">Try me!</button>
->>>>>>> bbd269d922464889d54ef9bda4fc17709427bb5a
+					
+					<button id="search-button" value="Submit Form">Try me!</button>
+				<!-- <div id="browse_app search-button"> 
+					<a target="_blank" href="index.html">Try Me!</a>
+				  </div> -->
 			</label>
-
+			<!-- <a target="_blank" href="page2.html">Portfolio</a>  -->
+			<!-- <form action="page2.html" method="post"></form> -->
 		</div>
+		
+		
 	</form>
+	
 	<div id="gifs-appear-here" class="row">
 		<div class="col-sm-3"></div>
 		<div class="col-sm-3"></div>
 		<div class="col-sm-3"></div>
 		<div class="col-sm-3"></div>
 	</div>
-
-
+	<!-- <form action="page2.html" method="post"> -->
+		<!-- <input type="text" name="search-button" /> -->
+		<!-- <input type="submit" value="Try Me" /> -->
+	
 	<script src="../Project-1/assets/java/meme.js"></script>
 </body>
 
