--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             </div>
 
         </div>
-        <div id="gifs-appear-here" class="row" border: solid 1px #CCC></div>
-        </div>
+    
+		<div id="gifs-appear-here" class="row">
+			<div class="col-sm-12 text-center currentLocation" >
+			</div>
+		</div>
         <script src="assets/java/meme.js">
         </script>
 </body>
