added clear button and functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <br>
                 <div class="input-group-append">
 
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+					<button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+					<button class="btn btn-outline-secondary" type="button" id="button-addon3">Clear</button>
                 </div>
             </div>
 
@@ -36,6 +37,7 @@
 		<div id="gifs-appear-here" class="row">
 			<div class="col-sm-12 text-center currentLocation" >
 			</div>
+			
 		</div>
         <script src="assets/java/meme.js">
         </script>
