--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <body>
 
+		<div class="row">
+				<div class="col-sm-12 text-center currentLocation" style="font-family: 'Calistoga', cursive;">
+				</div>
+
     <div id="SLIDE_BG">
         <div class="card" style="width: 22rem;">
             <img src="assets/images/logo-transparent.png" class="card-img-top" alt="...">
@@ -26,15 +30,15 @@
                 <br>
                 <div class="input-group-append">
 
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+					<button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+					<br>
+					<button class="btn btn-outline-secondary" type="button" id="button-addon3">Clear</button>
                 </div>
             </div>
 
-        </div>
-    
-		<div id="gifs-appear-here" class="row">
-			<div class="col-sm-12 text-center currentLocation" >
-			</div>
+		</div>
+		<div id="gifs-appear-here" class="row" style="background:white;">
+			
 		</div>
         <script src="assets/java/meme.js">
         </script>
