--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <div class="col-sm-12 text-center currentLocation" style="font-family: 'Calistoga', cursive;">
         </div>
         <div id="SLIDE_BG">
-            <div class="card" style="width: 22rem;">
-                <img src="assets/images/logo-transparent.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Welcome to The Laugh Factory! Use our search engine
-                        below to brighten up your day.
-                    </p>
-                    <input class="form-control" placeholder="Put something funny here Yo!" id="ex1" type="text">
-                    <br>
-                    <div class="input-group-append">
+                <div class="card column left" style="width: 22rem;">
+                    <img src="./assets/images/logo-transparent.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Welcome to The Laugh Factory! Use our search engine
+                            below to brighten up your day.
+                        </p>
+                        <input class="form-control" placeholder="Put something funny here Yo!" id="ex1" type="text">
+                        <br>
+                        <div class="input-group-append">
 
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon3">Clear</button>
-                    </div>
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                            <button class="btn btn-outline-secondary" type="button" id="button-addon3">Clear</button>
+                        </div>
                 </div>
+        </div>
+                <br>
 
-            </div>
-            <br>
+                <div id="gifs-appear-here" class="row">
 
-            <div id="gifs-appear-here" class="row" style="background: white;">
+                </div>
             </div>
-    </div>
             <script src="assets/java/meme.js">
             </script>
 </body>
